--- a/misc/custom.scss
+++ b/misc/custom.scss
@@ -48,59 +48,6 @@ $desktop: 960px + (2 * $gap) !default;
       }
     {%- endfor -%}
   }
-  &-1{
-    //background-color: $primary;
-    background: url('https://c.stocksy.com/a/YY3500/z0/1205314.jpg') no-repeat left 50%;
-    -webkit-background-size: cover;
-    background-size: cover;
-  }
-  &-2{
-    //background-color: $info;
-    background: url('https://c.stocksy.com/a/FY3500/z0/1205295.jpg') no-repeat left 50%;
-    -webkit-background-size: cover;
-    background-size: cover;
-  }
-  &-3{
-    //background-color: $warning;
-    background: url('https://c.stocksy.com/a/L1o500/z0/1383923.jpg') no-repeat left 50%;
-    -webkit-background-size: cover;
-    background-size: cover;
-  }
-  &-4{
-    //background-color: $danger;
-    background: url('https://c.stocksy.com/a/Z22000/z0/7847.jpg') no-repeat left 50%;
-    -webkit-background-size: cover;
-    background-size: cover;
-  }
-  &-gradient{
-    background: #b41e8e;
-    background: -moz-linear-gradient(45deg, #b41e8e 0%, #5c3f9e 50%, #0061af 100%);
-    background: -webkit-linear-gradient(45deg, #b41e8e 0%,#5c3f9e 50%,#0061af 100%);
-    background: linear-gradient(45deg, #b41e8e 0%,#5c3f9e 50%,#0061af 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b41e8e', endColorstr='#0061af',GradientType=1 );
-  }
-  &-singpass{
-    background: #be2e7d; /* Old browsers */
-    background: -moz-linear-gradient(45deg, #be2e7d 0%, #d64e54 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(45deg, #be2e7d 0%,#d64e54 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(45deg, #be2e7d 0%,#d64e54 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#be2e7d', endColorstr='#d64e54',GradientType=1 ); /*IE6-9 fallback on horizontal gradient*/
-  }
-  &-beeline{
-    background: #009d62; /* Old browsers */
-    background: -moz-linear-gradient(45deg, #009d62 0%, #0094d3 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(45deg, #009d62 0%,#0094d3 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(45deg, #009d62 0%,#0094d3 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#009d62', endColorstr='#0094d3',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-
-  }
-  &-parkingsg{
-    background: #0164b6; /* Old browsers */
-    background: -moz-linear-gradient(45deg, #0164b6 0%, #04a4e3 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(45deg, #0164b6 0%,#04a4e3 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(45deg, #0164b6 0%,#04a4e3 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0164b6', endColorstr='#04a4e3',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-  }
 }
 
 // Color definitions
@@ -335,3 +282,92 @@ $desktop: 960px + (2 * $gap) !default;
     width: 100%;
   }
 }
+
+//accordion Course
+.accordion {
+  input {
+    position: absolute;
+    opacity: 0;
+    z-index: -1;
+  }
+  .tabs {
+    border-radius: 0;
+    overflow: hidden;
+    // box-shadow: 0 4px 4px -2px rgba(0, 0, 0, 0.5);
+    margin-bottom: 4em;
+
+    h3{
+      font-weight: bold;
+      margin-bottom: 1em;
+      color: $primary;
+    }
+  }
+  .tab {
+    width: 100%;
+    color: black;
+    overflow: hidden;
+    &:hover {
+      color: #000;
+    }  
+  }
+  .tab-label {
+    display: flex;
+    justify-content: space-between;
+    // border-top: 1px solid #ddd;
+    padding: 1em 0;
+    font-size: 1.25rem;
+    color: #000000;
+    cursor: pointer;
+
+    /* Icon */
+    &:hover {
+      color: lighten(black, 10%);
+    }
+    &::after {
+      content: "\002B";
+      width: 2em;
+      height: 2em;
+      margin-left: 1em;
+      text-align: center;
+      transition: all .1s;
+      transform-origin: center center;
+    }
+  }
+  .tab-content {
+    max-height: 0;
+    padding: 0;
+    border: none;
+    border-bottom: 1px solid #ddd;
+    transition: all .1s;
+    margin-top: 0;
+  }
+  .tab-close {
+    display: flex;
+    justify-content: flex-end;
+    padding: 1em;
+    font-size: 0.75em;
+    background: $primary;
+    cursor: pointer;
+    &:hover {
+      background: lighten($secondary, 10%);
+    }
+  }
+  input:checked {
+    + .tab-label {
+      // background: darken($secondary, 10%);
+      &::after {
+        content: "\2212";
+        // -webkit-transform: rotate(90deg);
+        // transform: rotate(90deg);
+        // transform-origin: center center;
+      }
+    }
+    ~ .tab-content {
+      max-height: 600vh;
+      padding-bottom: 3em;
+      color: #666;
+      // padding: 1em;
+    }
+  }
+  }
+
