--- a/misc/custom.scss
+++ b/misc/custom.scss
@@ -381,6 +381,17 @@ $desktop: 960px + (2 * $gap) !default;
     padding: .8em 1.5em !important;
     border-radius: 8px;
     margin-top: 20px;
+    -webkit-box-shadow: 0px 5px 17px -3px rgba(18,17,90,0.2);
+    -moz-box-shadow: 0px 5px 17px -3px rgba(18,17,90,0.2);
+    box-shadow: 0px 5px 17px -3px rgba(18,17,90,0.2);
+
+    &:hover{
+      transform: translate(0, -3px) !important;
+       -webkit-box-shadow: 0px 8px 17px -3px rgba(18,17,90,0.1);
+        -moz-box-shadow: 0px 8px 17px -3px rgba(18,17,90,0.1);
+      box-shadow: 0px 8px 17px -3px rgba(18,17,90,0.1);
+      background: lighten(#12115A, 20%)!important;
+    }
   }
 
   .bp-hero-body {
