--- a/misc/custom.scss
+++ b/misc/custom.scss
@@ -421,8 +421,8 @@ $desktop: 960px + (2 * $gap) !default;
       color: #12115A !important;
 
       .display{
-        font-size: 4em !important;;
-        line-height: 3.5rem !important;
+        // font-size: 4em !important;;
+        line-height: 3.25rem !important;
         .is-hidden-touch{
           line-height: 4.25rem !important;
         }
@@ -443,4 +443,10 @@ $desktop: 960px + (2 * $gap) !default;
 .navbar-start .navbar-item + .has-dropdown {
   margin: 1rem;
   margin-top: 1.2rem;
+}
+
+@media screen and (min-width: 1024px) {
+  .display {
+    font-size: 4.5rem;
+  }
 }
