--- a/misc/custom.scss
+++ b/misc/custom.scss
@@ -450,3 +450,19 @@ $desktop: 960px + (2 * $gap) !default;
     font-size: 4.5rem;
   }
 }
+
+.bp-section{
+  .bp-container{
+    .row{
+      .col{
+        a.margin--top{
+          margin-top: 3rem !important;
+        }
+
+        .bp-sec-button{
+          margin-top: 2rem !important;
+        }
+      }
+    }
+  }
+}
