--- a/misc/custom.scss
+++ b/misc/custom.scss
@@ -440,9 +440,11 @@ $desktop: 960px + (2 * $gap) !default;
 
 
 
-.navbar-start .navbar-item + .has-dropdown {
-  margin: 1rem;
-  margin-top: 1.2rem;
+@media screen and (max-width: 1280px) {
+    .navbar-start .navbar-item + .has-dropdown {
+        margin: 1rem;
+        margin-top: 1.2rem;
+       }
 }
 
 @media screen and (min-width: 1024px) {
