--- a/misc/custom.scss
+++ b/misc/custom.scss
@@ -432,11 +432,23 @@ $desktop: 960px + (2 * $gap) !default;
     }
   }
 
+
   @media screen and (max-width: 768px){
-    .is-hidden-mobile {
-      display: block !important;
+    .bp-hero{
+      .bp-hero-body{
+        .bp-container{
+          .row{
+            .col{
+                .is-hidden-mobile {
+                  display: block !important;
+                }
+            }
+          }
+        }
+      }
     }
   }
+
 
 
 
