--- a/misc/custom.scss
+++ b/misc/custom.scss
@@ -463,9 +463,16 @@ $desktop: 960px + (2 * $gap) !default;
   .display {
     font-size: 4.5rem;
   }
+}
+
+
+@media screen and (min-width: 1680px) {
 
   .bg-hero {
-    background: url(/images/vaccinegov-hero-withlogo.png);
+    background: url(/images/vaccinegov-hero-withlogo-lower.png) no-repeat top left !important;
+    -webkit-background-size: cover !important;
+    background-size: cover !important;
+    background-position: center center !important;
   }
 }
 
